--- a/resources/_boilerplate.html
+++ b/resources/_boilerplate.html
@@ -31,7 +31,12 @@
     </ul>
   </nav>
   <section class="container">
-
+    <h1 class="large text-primary">
+      HEADING
+    </h1>
+    <p class="lead">
+      <i class="fas fa-user"></i> Text
+    </p>
   </section>
 </body>
 
